Restyle - Work in progress.

--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/table_and_pagination.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/table_and_pagination.css
@@ -1,6 +1,6 @@
-/* line 4, ../scss/table_and_pagination.scss */
+/* line 4, ../../scss/system/table_and_pagination.scss */
 .tableAndPagination .container_buttons { display: none; }
-/* line 8, ../scss/table_and_pagination.scss */
+/* line 8, ../../scss/system/table_and_pagination.scss */
 .tableAndPagination .count { display: none; }
 
 /*# sourceMappingURL=table_and_pagination.css.map */
