--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/wysiwyg.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/wysiwyg.css
@@ -1,32 +1,32 @@
-/* line 3, ../scss/wysiwyg.scss */
+/* line 3, ../../scss/system/wysiwyg.scss */
 #wysiwyg { display: none; position: relative; }
-/* line 7, ../scss/wysiwyg.scss */
+/* line 7, ../../scss/system/wysiwyg.scss */
 #wysiwyg .toolbar { position: relative; }
-/* line 10, ../scss/wysiwyg.scss */
+/* line 10, ../../scss/system/wysiwyg.scss */
 #wysiwyg .toolbar i { display: inline-block; color: #000000; border: 1px solid; cursor: pointer; margin-bottom: 5px; padding: 5px; }
-/* line 19, ../scss/wysiwyg.scss */
+/* line 19, ../../scss/system/wysiwyg.scss */
 #wysiwyg .toolbar > div { display: inline-block; }
-/* line 22, ../scss/wysiwyg.scss */
+/* line 22, ../../scss/system/wysiwyg.scss */
 #wysiwyg .toolbar > div > i { margin-right: 5px; }
-/* line 26, ../scss/wysiwyg.scss */
+/* line 26, ../../scss/system/wysiwyg.scss */
 #wysiwyg .toolbar > div > p { display: inline-block; margin-right: 5px; }
-/* line 32, ../scss/wysiwyg.scss */
+/* line 32, ../../scss/system/wysiwyg.scss */
 #wysiwyg .toolbar .popup_settings { display: none; position: absolute; top: 0; left: 0; text-align: left; border: 1px solid; padding: 5px; min-width: 100px; background-color: #ffffff; z-index: 5; -webkit-box-shadow: 0px 0px 5px #444444; -moz-box-shadow: 0px 0px 5px #444444; -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#444444')"; filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=5, Direction=0, Color='#444444')"; box-shadow: 0px 0px 5px #444444; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
-/* line 55, ../scss/wysiwyg.scss */
+/* line 55, ../../scss/system/wysiwyg.scss */
 #wysiwyg .toolbar .popup_settings fieldset { padding: 0 10px !important; }
-/* line 58, ../scss/wysiwyg.scss */
+/* line 58, ../../scss/system/wysiwyg.scss */
 #wysiwyg .toolbar .popup_settings fieldset legend { margin-bottom: 5px; font-size: 15px; font-weight: bold; }
-/* line 65, ../scss/wysiwyg.scss */
+/* line 65, ../../scss/system/wysiwyg.scss */
 #wysiwyg .toolbar .popup_settings a { margin-top: 10px; }
-/* line 69, ../scss/wysiwyg.scss */
+/* line 69, ../../scss/system/wysiwyg.scss */
 #wysiwyg .toolbar .popup_settings input[type='color'] { margin-bottom: 5px; }
-/* line 73, ../scss/wysiwyg.scss */
+/* line 73, ../../scss/system/wysiwyg.scss */
 #wysiwyg .toolbar .popup_settings textarea { resize: none; }
-/* line 77, ../scss/wysiwyg.scss */
+/* line 77, ../../scss/system/wysiwyg.scss */
 #wysiwyg .toolbar .popup_settings .container_fields { margin: 10px 0 0 0; }
-/* line 83, ../scss/wysiwyg.scss */
+/* line 83, ../../scss/system/wysiwyg.scss */
 #wysiwyg .editor { border: 1px solid; width: 100%; height: 700px; }
-/* line 89, ../scss/wysiwyg.scss */
+/* line 89, ../../scss/system/wysiwyg.scss */
 #wysiwyg .source { display: none; position: absolute; top: 31px; border: 1px solid; width: 100%; height: 700px; background-color: #faf9f9; padding: 5px; overflow-y: scroll; }
 
 /*# sourceMappingURL=wysiwyg.css.map */
