--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/basic.css
@@ -1,23 +1,16 @@
-@media (max-width: 839px) { /* line 13, ../../../../../../../../../../uebusaito/root/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/utility.scss */
-  .display_desktop { display: none !important; }
-  /* line 16, ../../../../../../../../../../uebusaito/root/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/utility.scss */
+@media (max-width: 839px) { .display_desktop { display: none !important; }
   .display_mobile { display: block !important; } }
-@media (min-width: 840px) { /* line 21, ../../../../../../../../../../uebusaito/root/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/utility.scss */
-  .display_desktop { display: block !important; }
-  /* line 24, ../../../../../../../../../../uebusaito/root/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/utility.scss */
+@media (min-width: 840px) { .display_desktop { display: block !important; }
   .display_mobile { display: none !important; } }
 @-webkit-viewport { width: device-width; }
 @-moz-viewport { width: device-width; }
 @-ms-viewport { width: device-width; }
 @-o-viewport { width: device-width; }
 @viewport { width: device-width; }
-/* line 45, ../../../../../../../../../../uebusaito/root/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/utility.scss */
 .user_select_none { -webkit-touch-callout: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 
-/* line 53, ../../../../../../../../../../uebusaito/root/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/utility.scss */
 .user_touch_none { -ms-touch-action: none; touch-action: none; }
 
-/* line 58, ../../../../../../../../../../uebusaito/root/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/utility.scss */
 .clearfix::after { content: ""; clear: both; }
 
 /*.button { -webkit-transform: scale(1) rotate(360deg); transform: scale(1) rotate(360deg); -webkit-transition: -webkit-transform 150ms cubic-bezier(.4, 0, 1, 1); transition: transform 150ms cubic-bezier(.4, 0, 1, 1);
@@ -361,102 +354,62 @@ p { margin: 0;
 }
 #page_menu_sort, #module_position_sort { position: relative;  div { position: absolute; top: -105px; left: 50%; width: 50px; }
 }*/
-@media (max-width: 839px) { /* line 1012, ../../scss/system/basic.scss */
-  .main .sortable_column { padding-top: 55px !important; }
-  /* line 1015, ../../scss/system/basic.scss */
+@media (max-width: 839px) { .main .sortable_column { padding-top: 55px !important; }
   .main .sortable_column form { width: 100% !important; } }
-@media (max-width: 599px) { /* line 1025, ../../scss/system/basic.scss */
-  .main .sortable_column { padding-top: 45px !important; } }
-/* line 1033, ../../scss/system/basic.scss */
+@media (max-width: 599px) { .main .sortable_column { padding-top: 45px !important; } }
 :root { --mdc-theme-primary: #1976d2; --mdc-theme-on-primary: #ffffff; --mdc-theme-secondary: #d50000; --mdc-theme-on-secondary: #ffffff; --mdc-theme-background: #ffffff; --mdc-theme-surface: #ffffff; --mdc-theme-on-surface: #868686; }
 
-/* line 1046, ../../scss/system/basic.scss */
 ::placeholder { color: #ffffff; opacity: 1; }
 
-/* line 1050, ../../scss/system/basic.scss */
 :-ms-input-placeholder { color: #ffffff; }
 
-/* line 1053, ../../scss/system/basic.scss */
 ::-ms-input-placeholder { color: #ffffff; }
 
-/* line 1057, ../../scss/system/basic.scss */
 .mdc-top-app-bar { z-index: 1; }
-/* line 1060, ../../scss/system/basic.scss */
 .mdc-top-app-bar .mdc-top-app-bar__row { -webkit-transition: all 0.4s ease-out; -moz-transition: all 0.4s ease-out; -o-transition: all 0.4s ease-out; transition: all 0.4s ease-out; background-image: url("../../images/templates/basic/16-9.jpg"); background-size: cover; background-position: center; }
 
-/* line 1071, ../../scss/system/basic.scss */
 .mdc-top-app-bar_shrink { height: 64px !important; }
 
-/* line 1075, ../../scss/system/basic.scss */
 .mdc-button { margin-top: 5px; }
-/* line 1078, ../../scss/system/basic.scss */
 .mdc-button i { margin-top: -2px; }
 
-/* line 1083, ../../scss/system/basic.scss */
 .mdc-tab-bar { margin: 0; }
 
-/* line 1087, ../../scss/system/basic.scss */
 html, body { margin: 0; padding: 0; }
 
-/* line 1092, ../../scss/system/basic.scss */
 html { height: 100%; }
 
-/* line 1095, ../../scss/system/basic.scss */
 body { position: relative; min-height: 100%; }
 
-/* line 1100, ../../scss/system/basic.scss */
 .logo_main { width: 45px; margin-top: 8px; }
 
-/* line 1106, ../../scss/system/basic.scss */
 .main .sortable_column { padding-top: 120px; padding-bottom: 80px; }
-/* line 1111, ../../scss/system/basic.scss */
 .main .sortable_column .page_container form { width: 50%; }
-/* line 1114, ../../scss/system/basic.scss */
 .main .sortable_column .page_container form .mdc-text-field, .main .sortable_column .page_container form .mdc-select { width: 100%; }
 
-/* line 1122, ../../scss/system/basic.scss */
 .footer { display: flex; justify-content: center; flex-direction: column; text-align: center; position: absolute; bottom: 0; width: 100%; height: 80px; }
-/* line 1134, ../../scss/system/basic.scss */
 .footer .icon div { display: inline-block; margin: 5px 10px; }
-/* line 1141, ../../scss/system/basic.scss */
 .footer .text p { margin: 0; font-size: 12px; }
 
-/* line 1148, ../../scss/system/basic.scss */
 .module, .module_clean { padding: 5px; overflow: hidden; }
-/* line 1152, ../../scss/system/basic.scss */
 .module .settings, .module_clean .settings { display: none; }
-/* line 1156, ../../scss/system/basic.scss */
 .module .drag, .module_clean .drag { display: none; }
-/* line 1161, ../../scss/system/basic.scss */
 .module .title i, .module .title h1, .module_clean .title i, .module_clean .title h1 { display: inline-block; vertical-align: middle; margin: 0; }
-/* line 1168, ../../scss/system/basic.scss */
 .module .mdc-card__actions, .module_clean .mdc-card__actions { padding: 0 !important; min-height: auto !important; }
-/* line 1174, ../../scss/system/basic.scss */
 .module .form_row .mdc-text-field--box, .module .form_row .mdc-text-field--outlined, .module .form_row .mdc-text-field__basic, .module_clean .form_row .mdc-text-field--box, .module_clean .form_row .mdc-text-field--outlined, .module_clean .form_row .mdc-text-field__basic { margin-top: 8px; margin-bottom: 0; }
-/* line 1180, ../../scss/system/basic.scss */
 .module .form_row .mdc-text-field__basic .mdc-floating-label, .module_clean .form_row .mdc-text-field__basic .mdc-floating-label { padding-left: 28px; }
-/* line 1186, ../../scss/system/basic.scss */
 .module .form_row .mdc-text-field__basic .material-icons, .module .form_row .mdc-text-field__basicTrailing .material-icons, .module_clean .form_row .mdc-text-field__basic .material-icons, .module_clean .form_row .mdc-text-field__basicTrailing .material-icons { margin-bottom: 5px; }
-/* line 1191, ../../scss/system/basic.scss */
 .module .form_row .mdc-select, .module_clean .form_row .mdc-select { height: 48px; }
 
-/* line 1197, ../../scss/system/basic.scss */
 .module { width: 100%; margin: auto; border: 1px solid #dadada; background-color: #ececec; }
-/* line 1203, ../../scss/system/basic.scss */
 .module .title { border-bottom: 1px solid #dadada; }
 
-/* line 1210, ../../scss/system/basic.scss */
 .page_container .header h1 { margin: 0; }
 
-/* line 1221, ../../scss/system/basic.scss */
 #panel_id_2 .form_user_authentication .container_submit button { margin-top: 0; width: 100%; }
-/* line 1228, ../../scss/system/basic.scss */
 #panel_id_2 p { margin: 0; }
-/* line 1233, ../../scss/system/basic.scss */
 #panel_id_2 .container_buttons a { width: 100%; }
-/* line 1238, ../../scss/system/basic.scss */
 #panel_id_2 .container_links { margin-top: 5px; text-align: center; }
-/* line 1242, ../../scss/system/basic.scss */
 #panel_id_2 .container_links a { display: block; text-decoration: none !important; }
 
 /*# sourceMappingURL=basic.css.map */
