--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/table_and_pagination.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/table_and_pagination.html.twig
@@ -20,13 +20,13 @@
     </div>
     <ul>
         <li class="previous">
-            <a href="#">{% trans %}table_and_pagination_4{% endtrans %}</a>
+            <a href="javascript:void(0)">{% trans %}table_and_pagination_4{% endtrans %}</a>
         </li>
         <li class="text">
             <span>{{response.values.pagination.text}}</span>
         </li>
         <li class="next">
-            <a href="#">{% trans %}table_and_pagination_5{% endtrans %}</a>
+            <a href="javascript:void(0)">{% trans %}table_and_pagination_5{% endtrans %}</a>
         </li>
     </ul>
     <p class="count">{% trans %}table_and_pagination_6{% endtrans %} <span>{{response.values.count}}</span></p>
