--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/wysiwyg.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/include/wysiwyg.html.twig
@@ -63,7 +63,7 @@
                         <input name="link_text" value=""/>
                     </div>
                 </div>
-                <a class="button_custom" href="#" data-command="link_ok">{{"wysiwyg_34"|trans}}</a>
+                <a class="button_custom" href="javascript:void(0)" data-command="link_ok">{{"wysiwyg_34"|trans}}</a>
             </div>
             <div class="only_image">
                 <p><b>{{"wysiwyg_21"|trans}}</b></p>
@@ -88,7 +88,7 @@
                         <input name="image_height" value=""/>
                     </div>
                 </div>
-                <a class="button_custom" href="#" data-command="image_ok">{{"wysiwyg_34"|trans}}</a>
+                <a class="button_custom" href="javascript:void(0)" data-command="image_ok">{{"wysiwyg_34"|trans}}</a>
             </div>
             <div class="only_button">
                 <p><b>{{"wysiwyg_22"|trans}}</b></p>
@@ -113,7 +113,7 @@
                         <input name="button_text" value=""/>
                     </div>
                 </div>
-                <a class="button_custom" href="#" data-command="button_ok">{{"wysiwyg_34"|trans}}</a>
+                <a class="button_custom" href="javascript:void(0)" data-command="button_ok">{{"wysiwyg_34"|trans}}</a>
             </div>
             <div class="only_table">
                 <p><b>{{"wysiwyg_23"|trans}}</b></p>
