--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/index.html.twig
@@ -1,6 +1,7 @@
 {% extends "@UebusaitoBundleViews/layout/layout_site.html.twig" %}
 
 {% block headMeta %}
+    <title>{{websiteName}}</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,7 +34,7 @@
     <header class="mdc-top-app-bar mdc-top-app-bar--prominent">
         <div class="mdc-top-app-bar__row">
             <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-                <a id="menu_root_button" class="material-icons mdc-top-app-bar__navigation-icon  display_mobile" href="javascript:void(0)">menu</a>
+                <a id="menu_root_button" class="material-icons mdc-top-app-bar__navigation-icon show_menu_root display_mobile" href="javascript:void(0)">menu</a>
                 <span class="mdc-top-app-bar__title display_desktop">{{websiteName}}</span>
                 <span class="mdc-top-app-bar__title display_mobile">
                     <img class="logo_main" src="{{asset("bundles/uebusaito/images/templates/" ~ settingRow['template'] ~ "/logo.svg")}}"/>
@@ -51,6 +52,20 @@
                 <a href="javascript:void(0)" class="material-icons mdc-top-app-bar__action-item" aria-label="Account" alt="Account">account_circle</a>
             </section>
         </div>
+        <aside class="mdc-drawer mdc-drawer--temporary mdc-typography">
+            <nav class="mdc-drawer__drawer">
+                <header class="mdc-drawer__header">
+                    <div class="mdc-drawer__header-content">
+                        <p>Header here<p>
+                    </div>
+                </header>
+                <nav id="icon-with-text-demo" class="mdc-drawer__content mdc-list">
+                    <a class="mdc-list-item mdc-list-item--activated" href="javascript:void(0)">
+                        <i class="material-icons mdc-list-item__graphic" aria-hidden="true">home</i>Home
+                    </a>
+                </nav>
+            </nav>
+        </aside>
     </header>
 {% endblock %}
 
@@ -142,8 +157,8 @@
 
 {% block bodyIncludeDown %}
     {{-include("@UebusaitoBundleViews/include/flash_bag.html.twig")-}}
-    {#{{-include("@UebusaitoBundleViews/include/popup_easy.html.twig")-}}#}
     {{-include("@UebusaitoBundleViews/include/loader.html.twig")-}}
+    {{-include("@UebusaitoBundleViews/include/popup_easy.html.twig")-}}
 {% endblock %}
 
 {% block javascript %}
