Restyle - Work in progress.

--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/table_and_pagination.scss
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/scss/system/table_and_pagination.scss
@@ -4,8 +4,8 @@
     .container_buttons {
         display: none;
     }
-    
-    .count {
-        display: none;
+    .previous, .text, .next {
+        display: inline-block;
+        vertical-align: middle;
     }
 }
