--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/table_and_pagination.css
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/public/css/system/table_and_pagination.css
@@ -1,4 +1,4 @@
 .tableAndPagination .container_buttons { display: none; }
-.tableAndPagination .count { display: none; }
+.tableAndPagination .previous, .tableAndPagination .text, .tableAndPagination .next { display: inline-block; vertical-align: middle; }
 
 /*# sourceMappingURL=table_and_pagination.css.map */
