--- a/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
+++ b/symfony_fw/src/ReinventSoftware/UebusaitoBundle/Resources/views/render/recover_password.html.twig
@@ -1,6 +1,6 @@
 {% form_theme form "@UebusaitoBundleViews/layout/layout_form_materialDesign.html.twig" %}
 
-<div class="page_container">
+<div>
     {% if response.values.userId == null %}
         <h1 class="mdc-typography--headline6">{% trans %}recover_password_1{% endtrans %}</h1>
         <form id="form_recover_password" action="{{path("recover_password", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
